--- a/app/templates/components/article-tile.hbs
+++ b/app/templates/components/article-tile.hbs
@@ -1,10 +1,12 @@
 <div class="article">
 
-  <p><img src={{article.imageUrl}} width="300px"></p>
+  <p><img src="{{article.imageUrl}}" width="300px"></p>
   <div class="sub-content">
     {{article.title}}, {{article.author}}
   </div>
+  {{#link-to 'article' article.id}}<button>See full article</button>{{/link-to}}
   {{update-article article=article updateArticle = "
   updateArticle"}}
   <button{{action 'delete' article}}>Delete</button>
+
 </div>
